--- a/indexTest.html
+++ b/indexTest.html
@@ -4,41 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-   
 </head>
 <body>
-    <div id="container">
-        <div id="res"></div>
-        <button class="btn">clicki</button>
-    </div>
+    <div id="res"></div>
 <script>
-let res = window.document.querySelector('#res')
-let btn = window.document.querySelector('.btn')
+ let res = window.document.querySelector('#res')
 
-
-
-
-btn.addEventListener('click', function () {
-
-    let arr = ['azul','verde','vermelho','amaralo','branco']
-
-    let coleçao = arr [Math.floor(Math.random() * arr.length)]
-   
-   if (coleçao == 'azul'){
-     res.innerHTML = 'azul'
-     res.body.style.backgroundColor = "blue";
-   }else if(coleçao =='verde'){
-    res.innerHTML =' verde'
-   }else if (coleçao == 'vermelho'){
-    res.innerHTML='vermelho'
-   }else if (coleçao == 'amarelo'){
-    res.innerHTML='amarelo'
-   }else if (coleçao == 'branco'){
-   res.innerHTML='branco'
-   }
-
-  })
-
+function parOuImpar(num) { 
+    let res = num
+    if(res === )
+ }
 </script>
 </body>
 </html>
