--- a/indext.html
+++ b/indext.html
@@ -7,27 +7,37 @@
 </head>
 <body>
     <script>
-
-class nome {
-    constructor(nome){
-     this.nome=nome
-     this.numero=11
-     this.força=4
+class padraoName{
+    constructor(){
+    if(this.cor===undefined){
+        throw new TypeError('instanciar')
     }
-    inf(){
-        return this.numero
-        this.força
+    if(this.b===undefined){
+        throw new TypeError('instanciar2')
     }
+    
+    }
+}
+class nome extends padraoName {
+    constructor(res){
+        super()
+        this.res=res
+        this.num01=undefined
+        this.num02=undefined
+    }
+    info(){
+        this.num01=10
+        this.num02=20
+    }
+    cor(){}
+    b(){}
 }
 
 let c1 = new nome('denner')
 
-c1.inf()
+c1.info()
 
-console.log(c1.nome)
-console.log(c1.numero)
-console.log(c1.força)
-
+console.log(c1.num01 + c1.num02)
 
     </script>
 </body>
