--- a/indexTest.html
+++ b/indexTest.html
@@ -6,49 +6,33 @@
     <title>Document</title>
 </head>
 <body>
-   
-<script>
-class carro{
-    constructor(tipo){
-        if(tipo==1){
-            this.nome='especial'
-            this.vel=50
-        }else if (tipo ==2 ){
-            this.nome='corrida'
-            this.vel=100
-        }
-    }
-    info(){
-        console.log(this.nome)
-        console.log(this.vel)
-    }
-}
 
-class carroEspecial extends carro{
-    constructor(estagio){
-        super(1,estagio)
-        this.estagio=estagio
-    }
-    info(){
-        if(this.tipo==1){ 
-            super.info()
-        }else if(this.tipo==2) {
-            super.info()
-        }else{
-            console.log('carro especial')
-        }
-        
-    }
-}
+    <div id="res"></div>
+    <button class="btn">click</button>
+    <script>
+
+let res = window.document.querySelector('#div')
+let btn = window.document.querySelector('.btn')
 
 
-let c1 = new carro(1)
-let c2 = new carro(2)
-let c3 = new carroEspecial(1)
 
-c1.info()
-c2.info()
-c3.info()
-</script>
+btn.addEventListener('click', function () {
+
+    let col=[0,1,2,3,4,5,6,7,8,9,10]
+
+    let r = col [Math.floor(Math.random() * 10 )]
+
+console.log(r)
+
+  })
+
+
+
+
+
+
+
+
+    </script>
 </body>
 </html>
