--- a/indexTest.html
+++ b/indexTest.html
@@ -7,22 +7,23 @@
 </head>
 <body>
 
-    <div id="res"></div>
+    <div id="res"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus illum consequatur quas possimus ex sequi quia. Qui iste ipsa nemo veritatis, quas doloribus dolorum, velit veniam autem, quidem cum hic. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet error esse, voluptas quos animi officia debitis veniam placeat tenetur natus rem id repellat, quis, laborum doloribus tempora quas culpa vitae.</p></div>
     <button class="btn">click</button>
     <script>
 
-let res = window.document.querySelector('#div')
+let res = window.document.querySelector('div p')
 let btn = window.document.querySelector('.btn')
 
+
+res = res.textContent
 
 
 btn.addEventListener('click', function () {
 
-    let col=[0,1,2,3,4,5,6,7,8,9,10]
 
-    let r = col [Math.floor(Math.random() * 10 )]
 
-console.log(r)
+navigator.clipboard.writeText(res)
+
 
   })
 
