--- a/indext.html
+++ b/indext.html
@@ -6,14 +6,25 @@
     <title>Document</title>
 </head>
 <body>
-    <button id="btn">click</button>
+    <div id="res"></div>
+    <button class="btn">clique</button>
     <script>
-let btn = window.document.querySelector('#btn')
+
+let res = window.document.querySelector('#res')
+let btn = window.document.querySelector('.btn')
+
+
+
+let col = [0,1,2,3,4,5,6,7,8,9]
 
 
 btn.addEventListener('click', function () {
 
-    navigator.clipboard.writeText('oi oi oi oi oi oi')
+    let arr = col [Math.floor(Math.random() * 9)]
+
+
+console.log(arr)
+
   })
 
 
