--- a/projeto-iniciante/index02.html
+++ b/projeto-iniciante/index02.html
@@ -54,6 +54,11 @@ let coleçãoDeCores = ['red','green','yellow','blue','gray','purple','orange']
 
 let rand = coleçãoDeCores [Math.floor(Math.random() * coleçãoDeCores.length)]
 
+document.body.style.backgroundColor = rand
+
+
+
+/*
 if(rand == 'red'){
     res.innerHTML = 'red'
 
@@ -74,7 +79,7 @@ if(rand == 'red'){
 
 }else if (rand == 'orange'){
     res.innerHTML= 'orange'
-}
+}*/
   })
 
 </script>
