--- a/indext.html
+++ b/indext.html
@@ -10,24 +10,12 @@
     <button class="btn">clique</button>
     <script>
 
-let res = window.document.querySelector('#res')
-let btn = window.document.querySelector('.btn')
-
-
-
-let col = [0,1,2,3,4,5,6,7,8,9]
-
-
-btn.addEventListener('click', function () {
-
-    let arr = col [Math.floor(Math.random() * 9)]
-
-
-console.log(arr)
-
-  })
-
-
+let myCountry={
+    city:'spo',
+    greet(){
+        
+    }
+}
 
     </script>
 </body>
