--- a/javascript-lado-cliente/variaveis-html/variaveis03.html
+++ b/javascript-lado-cliente/variaveis-html/variaveis03.html
@@ -6,9 +6,20 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="res"></div>
-    <button class="btn">clique</button>
+
+    <div id="cr"></div>
     <script>
+  
+myFunction()
+
+
+let res = window.document.querySelector('#cr').innerHTML =' o carro que eeu escolhio foi ' + carName
+
+
+function myFunction() { 
+    carName ='gol'
+ }
+
 
 
 
