--- a/javascript-lado-cliente/variaveis-html/variaveis04.html
+++ b/javascript-lado-cliente/variaveis-html/variaveis04.html
@@ -6,10 +6,27 @@
     <title>Document</title>
 </head>
 <body>
+
+    <h3> variaveis em escopos com soma </h3>
     <div id="res"></div>
-    <button class="btn">clique</button>
     <script>
 
+mySoma01()
+
+mySoma02()
+
+
+let res = window.document.querySelector('#res').innerHTML = som01 + som02 
+
+
+function mySoma01(){
+som01=10
+
+}
+
+function mySoma02(){
+    som02 = 10
+}
 
 
     </script>
