--- a/CFB_CURSOS/javascript-lado-cliente/objetos-html/objt-39.html
+++ b/CFB_CURSOS/javascript-lado-cliente/objetos-html/objt-39.html
@@ -8,17 +8,14 @@
 <body>
     <script>
 
-let nom = {
+let num = {
+ name:'denner',
+ age:29,
+};
 
-value:10,
-  math(){
-    return this.value + 3
-  }
-}
+let key  = prompt('what do you about user', 'name')
 
-console.log(nom.math())
-
-
+alert( user[key])
 
     </script>
 </body>
