--- a/roadMap/Built-in objects/b-obj01.html
+++ b/roadMap/Built-in objects/b-obj01.html
@@ -6,20 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <script>
-
-let nom = {
-
-value:10,
-  math(){
-    return this.value + 3
-  }
-}
-
-console.log(nom.math())
+    <p>O termo "objetos globais" (ou objetos internos padrão) aqui não deve ser confundido com o objeto global. Aqui, "objetos globais" referem-se a objetos no escopo global.</p><br>
+    <p></p>
 
 
-
-    </script>
 </body>
 </html>
