--- a/roadMap/herança prototipica/objtos-05.html
+++ b/roadMap/herança prototipica/objtos-05.html
@@ -8,17 +8,14 @@
 <body>
     <script>
 
-let nom = {
 
-value:10,
-  math(){
-    return this.value + 3
-  }
+let num  = {
+    value:2,
+    som (){
+        return this.value + 3
+    }
 }
-
-console.log(nom.math())
-
-
+console.log(num.som())
 
     </script>
 </body>
