--- a/teste.html
+++ b/teste.html
@@ -6,20 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <button id="btn">click</button>
-    <div id="arra"></div>
     <script>
-let btn = window.document.querySelector('#btn')
-let arra = window.document.querySelector('#arra')
-
-let arr = [0,1,2,3,4,5,6,7,8,9]
-
-btn.addEventListener('click', function () {
-
-let res = arr [Math.floor(Math.random()* 9)]
-
-arra.innerHTML = res
-  })
+let srr = ['gold','yellow','']
 
 
     </script>
