--- a/roadMap/reptiçoes-pt01/rept-for08.html
+++ b/roadMap/reptiçoes-pt01/rept-for08.html
@@ -6,11 +6,20 @@
     <title>Document</title>
 </head>
 <body>
-    <script>
-        let i =10
-        for(;i<15;i++){
-            console.log(i)
-        }
-    </script>
+<script>
+
+
+const nomes = [{
+nome:'denner',
+sobre:'nemeth',
+idade:29
+}]
+
+
+console.log(typeof(nomes))
+
+
+
+</script>
 </body>
 </html>
