--- a/teste.html
+++ b/teste.html
@@ -8,7 +8,9 @@
 <body>
     <script>
  
-
+const numbers = [1,2,3,4,5]
+const arr=numbers.map((nuns => nuns * 4))
+console.log(arr)
 
     </script>
 </body>
