--- a/teste.html
+++ b/teste.html
@@ -7,11 +7,14 @@
 </head>
 <body>
     <script>
- 
-const numbers = [1,2,3,4,5]
-const arr=numbers.map((nuns => nuns * 4))
-console.log(arr)
+        const pessoas ={
+            pessoa1:'branca',
+            pessoa2:'branca'
+        }
+        pessoas['pessoa3']='preta'
 
+        
+        consoe.log(pessoas['pessoa3'])
     </script>
 </body>
 </html>
