--- a/roadMap/this/this01.html
+++ b/roadMap/this/this01.html
@@ -6,6 +6,18 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <script>
+
+
+const nuns = {
+    num01:'Denner',
+    num02:'nometmb',
+    sayHi(){
+        console.log(`hi: ${this.num01}`)
+    }
+}
+
+nuns.sayHi()
+    </script>
 </body>
 </html>
