--- a/teste.html
+++ b/teste.html
@@ -6,13 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script>
-        let nun = 4
-        if(nun < 20){
-            throw new Error ('SINTO MUITO, POUCA QUANTIDADE');   
-        }else {
-            throw new  Error ('Numero Grande')
-        }
-    </script>
+    <div id="res"></div>
+    <script src="tt.js" type="module"></script>
 </body>
 </html>
