--- a/teste.html
+++ b/teste.html
@@ -6,7 +6,19 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="res"></div>
-    <script src="tt.js" type="module"></script>
+    <script>
+
+
+
+
+const num={
+    num01:'nomes'
+}
+
+let nome = Object.assign({}, num)
+
+console.log(nome)
+
+    </script>
 </body>
 </html>
