--- a/CFB_CURSOS/javascript-lado-cliente/modulos/modulospasta/modulos01.html
+++ b/CFB_CURSOS/javascript-lado-cliente/modulos/modulospasta/modulos01.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     
-<script src="modulos01.js" type="module"></script>
+<script  src="modulos01.js" crossorigin="anonymous" ></script>
 </body>
 </html>
