--- a/CFB_CURSOS/javascript-lado-cliente/objetos-html/objt-44.html
+++ b/CFB_CURSOS/javascript-lado-cliente/objetos-html/objt-44.html
@@ -6,6 +6,18 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="symbol13.js"></script>
+    <script>
+
+const person ={
+    nome:'denner',
+    age:29,
+    country:'são paulo'
+}
+
+console.log(person.nome)
+console.log(person['country'])
+
+
+    </script>
 </body>
 </html>
