--- a/testsd.html
+++ b/testsd.html
@@ -6,6 +6,19 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="symbol13.js"></script>
+    <script>
+
+const n = {
+    nome:'denner',
+    age:29,
+    country:'são paulo'
+}
+
+console.log(n.nome)
+console.log(n['age'])
+
+
+
+    </script>
 </body>
 </html>
