--- a/testsd.html
+++ b/testsd.html
@@ -6,19 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script>
-
-const n = {
-    nome:'denner',
-    age:29,
-    country:'são paulo'
-}
-
-console.log(n.nome)
-console.log(n['age'])
-
-
-
-    </script>
+<script src="tt.js"></script>
 </body>
 </html>
