--- a/testsd.html
+++ b/testsd.html
@@ -6,26 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <button class="btn"></button>
-    <div id="res"></div>
-    <script>
-
-
-let btn = window.document.querySelector('.btn')
-let res = window.document.querySelector('#res')
-
-let numers = [0,1,2,3,4,5,6,7,8,9,10]
-
-
-btn.addEventListener('click', function(){
-
-let num = numers [Math.floor(Math.random()*10)]
-
-res.innerHTML = num
-})
-
-
-
-    </script>
+    <script src="tt.js"></script>
 </body>
 </html>
