--- a/tt.html
+++ b/tt.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
+<div class="res"></div>
+ <button class="incre">incrementar</button>
+ <button class="decre">decrementar</button>
     <script src="tt.js"></script>
 </body>
 </html>
