--- a/shorthands/shorthand02.html
+++ b/shorthands/shorthand02.html
@@ -6,11 +6,28 @@
     <title>Document</title>
 </head>
 <body>
-
-    <input type="number" name="" id="">
+    <input type="number" name="nun" id="nun">
+<button id="btn">array</button>
     <script>
+let nun = window.document.querySelector('#nun')
+let btn = window.document.querySelector('#btn')
 
 
+
+btn.addEventListener('click', function(){
+
+let arr = Object.values(nun)
+
+arr.map(function(c){
+    return c * 2
+})
+
+
+nun.innerHTML = arr
+
+
+
+})
 
     </script>
 </body>
