--- a/testsd.html
+++ b/testsd.html
@@ -6,6 +6,20 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="tt2.js"></script>
+    <div id="c"></div>
+    <script>
+let c = window.document.querySelector('#c')
+
+
+
+let nuns1 = [1,2,3]
+
+
+let nuns2 = [3,4,5]
+
+
+let osDois = [...nuns1, ...nuns2]
+consoele.log(osDois)
+    </script>
 </body>
 </html>
