--- a/testsd.html
+++ b/testsd.html
@@ -19,7 +19,7 @@ let nuns2 = [3,4,5]
 
 
 let osDois = [...nuns1, ...nuns2]
-consoele.log(osDois)
+console.log(osDois)
     </script>
 </body>
 </html>
