--- a/tt.html
+++ b/tt.html
@@ -4,11 +4,62 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+
+#canvas{
+    background-color: red;
+    color: white;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 25px;
+    width: 600px;
+    height: 500px;
+    margin: 50px auto 50px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#btn{
+    text-align: center;
+    width: 200px;
+    height: 50px;
+    margin: 50px auto 50px;
+    color: white;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    background: black;
+    border-radius: 5px;
+    border-style: none;
+    display: block;
+}
+    </style>
 </head>
 <body>
-<div class="res"></div>
- <button class="incre">incrementar</button>
- <button class="decre">decrementar</button>
-    <script src="tt.js"></script>
+<div id="canvas">
+    my background 'll change when my button below is clicked'
+</div>
+
+<button id="btn">click me!</button>
+
+    <script>
+
+//Select 7 colors
+ let colors = [ 'red', 'blue', 'green', 'orange', 'purple', 'black', 'yellow'];
+
+
+
+//change the background of canvas when button is clicked
+ let btn = document.getElementById('btn');
+
+ btn.addEventListener('click', function(){
+    //select a random number between 0 - 6
+    let index = parseInt((Math.random()*colors.length)+1);
+    //grab the canvas
+    let canvas = document.getElementById('canvas');
+
+    canvas.style.background = `${colors[index]}`
+})
+
+    </script>
 </body>
 </html>
