--- a/CFB_CURSOS/javascript-lado-cliente/manipulaçãoString/strings01.html
+++ b/CFB_CURSOS/javascript-lado-cliente/manipulaçãoString/strings01.html
@@ -14,8 +14,8 @@
        console.log(nome.charAt(0))
 
        
-
-
+  console.log(nome.lastIndexOf('e'))
+console.log(nome.toLocaleUpperCase())
 
 
 
