--- a/CFB_CURSOS/javascript-lado-cliente/manipulaçãoString/strings07.html
+++ b/CFB_CURSOS/javascript-lado-cliente/manipulaçãoString/strings07.html
@@ -8,19 +8,14 @@
 <body>
     <script>
 
-
 let nome1 = new String('me chamo Denner')
 let nome2 = new String('me chamo Denner')
 
 
-console.log(nome1.localeCompare(nome2))
 
+console.log(nome1.replace('e','o'))
 
-// breves resultados 0 verdadeiro e 1 pra falso 
-
-
-
-
+//vai substituir a fprimeira letra que encontra que no caso é o e, por o
 
     </script>
 </body>
