--- a/CFB_CURSOS/javascript-lado-cliente/manipulaçãoString/strings08.html
+++ b/CFB_CURSOS/javascript-lado-cliente/manipulaçãoString/strings08.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,17 +8,10 @@
 <body>
     <script>
 
-
 let nome1 = new String('me chamo Denner')
 let nome2 = new String('me chamo Denner')
 
-
-console.log(nome1.localeCompare(nome2))
-
-
-// breves resultados 0 verdadeiro e 1 pra falso 
-
-
+console.log(nome1.slice(0,9))// fatiamento de strings resul, 'me chamo'
 
 
 
