--- a/arquive.html
+++ b/arquive.html
@@ -8,15 +8,27 @@
 <body>
     <script>
 
-function par (metros,centimetros,milimetros){
-    this.metros=metros
-    this.centimetros=centimetros
-    this.milimetros=milimetros
 
-}
-let pares = new par(100,200,300)
+function centMil(centimetros, milimetros, metros) {
 
-console.log(pares)
+this.centimetros=centimetros
+this.milimetros=milimetros
+this.metros=metros
+
+
+
+
+
+
+
+  }
+
+
+
+let arr =  new centMil (100,200,300)
+
+
+console.log(arr)
 
     </script>
 </body>
