--- a/testsd.html
+++ b/testsd.html
@@ -6,20 +6,18 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="c"></div>
     <script>
-let c = window.document.querySelector('#c')
+let nome1 = new Object('nome')
+
+let nome2 = new Object('name')
+
+console.log(nome1.)
 
 
 
-let nuns1 = [1,2,3]
 
 
-let nuns2 = [3,4,5]
 
-
-let osDois = [...nuns1, ...nuns2]
-console.log(osDois)
     </script>
 </body>
 </html>
