--- a/arquive.html
+++ b/arquive.html
@@ -16,7 +16,7 @@ function par (metros,centimetros,milimetros){
 }
 let pares = new par(100,200,300)
 
-console.log(pares)
+console.log(pares)//  reultado metros100, centimetros 200, milimetros 300
 
     </script>
 </body>
