--- a/testsd.html
+++ b/testsd.html
@@ -7,14 +7,12 @@
 </head>
 <body>
     <script>
-let nome1 = new Object('nome')
+let nome1 = new String('name')
 
-let nome2 = new Object('name')
-
-console.log(nome1.)
+let nome2 = new String('name')
 
 
-
+console.log(nome1.localeCompare(nome2))
 
 
 
