--- a/arquive.html
+++ b/arquive.html
@@ -6,54 +6,21 @@
     <title>Document</title>
 </head>
 <body>
-
     <script>
 
 
-<<<<<<< HEAD
-let name01 = new String ('nome')
-let name02 = new String ('nome')
-let name03 = new String ('NOME')
+let nome1 = new String(4)
+let nome2 = new String('nomees')
 
-console.log(name01.localeCompare(name02))
+console.log(nome1.concat(nome2))
+console.log(nome1.toString())
 
-console.log(name01.toLocaleUpperCase())
-
-console.log(name03.toLocaleLowerCase())
+console.log(typeof(nome1))
 
 
 
 
-if (name01 === false ){
-    console.log('comparação feita e são iguais')
-}else {
-    console.log('comparação feita e strings são diferetes ')
-}
-
-=======
-function centMil(centimetros, milimetros, metros) {
-
-this.centimetros=centimetros
-this.milimetros=milimetros
-this.metros=metros
-
-
-
-
-
-
-
-  }
-
-
-
-let arr =  new centMil (100,200,300)
-
-
-console.log(arr)
->>>>>>> e470af76d732d31a2d0fb1b829a9a93fbe9fac22
 
     </script>
-
 </body>
 </html>
