--- a/arquive.html
+++ b/arquive.html
@@ -6,20 +6,17 @@
     <title>Document</title>
 </head>
 <body>
+    <h3> usando substring a parte que recorta e não inclui espaço entre as strings<br>
+        diferente do .slice
+    </h3>
     <script>
 
-
-let nome1 = new String(4)
-let nome2 = new String('nomees')
-
-console.log(nome1.concat(nome2))
-console.log(nome1.toString())
-
-console.log(typeof(nome1))
+let nome1 = new String('Denner Nemeth de Queiroz')
 
 
 
-
+let parte1=nome1.substring(0,6)
+console.log(parte1)//res : Denner
 
     </script>
 </body>
