--- a/tt.html
+++ b/tt.html
@@ -8,13 +8,19 @@
 <body>
     <script>
 
+let x =  1 
+
+x = ( x++,x)
+console.log(x)
+
+let z = 10 
 
 
-let nome =  new String('oi')
 
-let nome2 = new String('oi')
 
-console.log(nome.localeCompare(nome2))
+
+
+
 
     </script>
 </body>
