--- a/arquive.html
+++ b/arquive.html
@@ -6,17 +6,18 @@
     <title>Document</title>
 </head>
 <body>
-    <h3> usando substring a parte que recorta e não inclui espaço entre as strings<br>
-        diferente do .slice
-    </h3>
     <script>
 
-let nome1 = new String('Denner Nemeth de Queiroz')
+
+let x = 1  
 
 
+x = ( 2,4)
 
-let parte1=nome1.substring(0,6)
-console.log(parte1)//res : Denner
+
+console.log(x)
+
+
 
     </script>
 </body>
