--- a/roadMap/maths/maths01.html
+++ b/roadMap/maths/maths01.html
@@ -6,12 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-
-<h1 id="c">clicou</h1>
     <script>
-let randomNumber = Math.floor(Math.random() ) + 1  // 1
+
+
+let randomNumber = Math.floor(Math.random() * 100 ) + 1 // 1 between 100 + 1  
+
 
 console.log(randomNumber)
+
     </script>
 </body>
 </html>
