--- a/teste.html
+++ b/teste.html
@@ -7,18 +7,15 @@
 </head>
 <body>
     <script>
-let n = new String('Denner Nemeth de Queiroz')
+let nome = new String('Inside my heart is darkness')
 
-console.log(n)
 
-console.log(n.search('Denner'))
-console.log(n.search(/denner/i))
+console.log(nome.search('I'))
+console.log(nome.search(/I/i))
 
-console.log(n.match('e'))
-console.log(n.match(/e/g))
+console.log(nome.)
 
-console.log(n.replace('Nemeth','Teste'))
-console.log(n.replace(/e/ig,'teste'))
+
     </script>
 </body>
 </html>
