--- a/teste.html
+++ b/teste.html
@@ -6,16 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <script>
-let nome = new String('Inside my heart is darkness')
+    <Script>
+for(let i= 1; i<10; i++){
+    console.log(i)
+}
 
 
-console.log(nome.search('I'))
-console.log(nome.search(/I/i))
 
-console.log(nome.)
-
-
-    </script>
+    </Script>
 </body>
 </html>
