--- a/teste.html
+++ b/teste.html
@@ -6,13 +6,16 @@
     <title>Document</title>
 </head>
 <body>
-    <Script>
-for(let i= 1; i<10; i++){
-    console.log(i)
+    <script>
+
+
+
+for (let n1 = 1; n1 > 10 ; n1++){
+
+console.log(n1)
+
+
 }
-
-
-
-    </Script>
+    </script>
 </body>
 </html>
