--- a/CFB_CURSOS/javascript-lado-cliente/regEx/regEx03.html
+++ b/CFB_CURSOS/javascript-lado-cliente/regEx/regEx03.html
@@ -7,12 +7,7 @@
 </head>
 <body>
     <script>
-let nome = new String('Denner Nemeth de Queiroz')
-
-
-console.log(nome.replace('Nemeth','Teste'))
-
-console.log(nome.replace(/e/ig,'Teste'))
+let name = 
 
 
 
