--- a/teste.html
+++ b/teste.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,12 +10,8 @@
 
 
 
-for (let n1 = 1; n1 > 10 ; n1++){
-
-console.log(n1)
 
 
-}
     </script>
 </body>
 </html>
