--- a/teste.html
+++ b/teste.html
@@ -1,17 +1,62 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+
+#container{
+width: 400px;
+height: 400px;
+position: relative;
+background-color: yellow;
+}
+#animate{
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    background-color: red;
+}
+    </style>
 </head>
 <body>
-    <script>
+<h1> Meu primeiro Javascript Animado</h1>
+<div id="container">
+    <div id="animate">minha animação vai ocorrer aqui </div>
+</div>
+
+    <Script>
+id = setInterval(frame, 5);
+
+function frame() {
+  if (/* test for finished */) {
+    clearInterval(id);
+  } else {
+    /* code to change the element style */ 
+  }
+}
 
 
 
+function myMove(){
+let id= null; 
+const elem = window.document.querySelector('#animate');
+let pos = 0 
+clearInterval(id);
+id = setInterval(frame, 5);
+function frame(){
+    if(pos === 350){
+        clearInterval(id)
+    }else {
+        pos++
+        elem.style.top= pos + 'px'
+        elem.style.left = pos + 'px'
+    }
+}
 
+}
 
-    </script>
+    </Script>
 </body>
 </html>
