--- a/teste.html
+++ b/teste.html
@@ -8,16 +8,12 @@
 <body>
     <script>
 
-class numero {
-    constructor(){
-        this.num1=10
-        this.num2=10 
+class num {
+    constructor(num1,num2){
+    this.n1 = num1
+    this.n2 = num2
     }
 }
-let n1 = new numero()
-let n2 = new numero()
-
-console.log(n1.num1 + n2.num2)
 
 
 
