--- a/test1.html
+++ b/test1.html
@@ -4,8 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        main{
+            background-color: darkblue;
+            height: 300px;
+            width: 300px;
+            color: wheat;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
+    <main>
+        <h3 id="mani">Hi this is title of my front page</h3>
+    </main>
     
+
+
+<script>
+let mani = window.document.querySelector('#mani')
+
+
+const newCont = document.createElement('h4')
+mani.appendChild(newCont)
+
+newCont.innerHTML = 'hi my second text inside of h3 '
+
+
+
+
+
+</script>
+
+
 </body>
 </html>
