--- a/teste.html
+++ b/teste.html
@@ -6,22 +6,23 @@
     <title>Document</title>
 </head>
 <body>
-    <h3>criando metodo filter</h3>
+    
+    <script>
+let numerosAleatorios = [2,4,2,3,5,6,7,8,91,0,12,43,12,13,12,65,76]
 
 
-<script>
+const osNumbers = numerosAleatorios.filter((a)=>{
 
-const idades = [1,2,3,4,56,7,8,5,3,1,3,4,5,2,4,6,78,4,212,4,6,89,5,3,2]
+if (a >= 30){
+    return a
+}
 
-let maior=idades.filter((val)=>{
-    if(val > 20){
-        return val
-    }
+
+
 })
 
-console.log(maior)
+console.log(osNumbers)
 
-
-</script>
+    </script>
 </body>
 </html>
