--- a/teste.html
+++ b/teste.html
@@ -8,21 +8,18 @@
 <body>
     
     <script>
-let numerosAleatorios = [2,4,2,3,5,6,7,8,91,0,12,43,12,13,12,65,76]
+let num = [1,4,2,3,10,12,3,4,5,7,8,9]
 
+const j = num.filter((a)=>{
 
-const osNumbers = numerosAleatorios.filter((a)=>{
-
-if (a >= 30){
+if (a >= 5){
     return a
 }
 
 
-
 })
 
-console.log(osNumbers)
-
+console.log(j)
     </script>
 </body>
 </html>
