--- a/teste.html
+++ b/teste.html
@@ -6,20 +6,23 @@
     <title>Document</title>
 </head>
 <body>
-    
     <script>
-let num = [1,4,2,3,10,12,3,4,5,7,8,9]
 
-const j = num.filter((a)=>{
 
-if (a >= 5){
-    return a
+let x = 3 
+{
+    let x = 5
 }
 
 
-})
+console.log(x)
 
-console.log(j)
-    </script>
+
+
+
+
+
+
+</script>
 </body>
 </html>
