--- a/teste.html
+++ b/teste.html
@@ -9,20 +9,18 @@
     <script>
 
 
-let x = 3 
+let x  = 10
 {
-    let x = 5
+    let x = 15
 }
 
 
-console.log(x)
+if(x == 10){
+    console.log(x)
+}else{
+    console.log(x)
+}
 
-
-
-
-
-
-
-</script>
+    </script>
 </body>
 </html>
