--- a/teste.html
+++ b/teste.html
@@ -6,20 +6,17 @@
     <title>Document</title>
 </head>
 <body>
-    
     <script>
-let num = [1,4,2,3,10,12,3,4,5,7,8,9]
 
-const j = num.filter((a)=>{
+let nuns = [0,1,2,3,4,5,6,7,8,9,10]
 
-if (a >= 5){
-    return a
-}
+let arr= nuns[Math.floor(nuns * Math.random()) ]
+
+console.log(arr)
 
 
-})
 
-console.log(j)
+
     </script>
 </body>
 </html>
