--- a/teste.html
+++ b/teste.html
@@ -6,21 +6,22 @@
     <title>Document</title>
 </head>
 <body>
-    <script>
+    <div id="msg"></div>
+    <button id="btn">click</button>
+   <script>
+    let msg = window.document.querySelector('#msg')
+    let btn = window.document.querySelector('#btn') 
+
+    let numeros = [1,2,3,4,5,6,7,8,9,10]
+
+    btn.addEventListener('click', function(){
+        
+    msg.innerHTML = numeros = [Math.floor(Math.random()* 10 )]
+
+    })
 
 
-let x  = 10
-{
-    let x = 15
-}
 
-
-if(x == 10){
-    console.log(x)
-}else{
-    console.log(x)
-}
-
-    </script>
+   </script> 
 </body>
 </html>
