--- a/teste.html
+++ b/teste.html
@@ -1,26 +1,34 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
+    <button class="btn">clicar</button>
+    <div id="msg"></div>
     <script>
+let btn = window.document.querySelector('.btn')
+let msg = window.document.querySelector('#msg')
 
 
-let x  = 10
-{
-    let x = 15
-}
 
 
-if(x == 10){
-    console.log(x)
-}else{
-    console.log(x)
-}
 
-   </script> 
+btn.addEventListener('click', function(){
+let nuns = [1,2,3,4,5,6,7,8,9,10]
+
+let arr = nuns  [Math.floor(Math.random) *10 ]
+
+msg.innerHTML = arr
+})
+
+
+
+
+
+
+    </script>
 </body>
 </html>
