--- a/teste.html
+++ b/teste.html
@@ -6,25 +6,15 @@
     <title>Document</title>
 </head>
 <body>
-    <button class="btn">clicar</button>
-    <div id="msg"></div>
     <script>
-let btn = window.document.querySelector('.btn')
-let msg = window.document.querySelector('#msg')
+        
+let a = 1 
+let b = 2 
+let c = 3 
 
+a = b, c= 6
 
-
-
-
-btn.addEventListener('click', function(){
-let nuns = [1,2,3,4,5,6,7,8,9,10]
-
-let arr = nuns  [Math.floor(Math.random) *10 ]
-
-msg.innerHTML = arr
-})
-
-
+console.log()
 
 
 
