--- a/teste.html
+++ b/teste.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,15 +8,6 @@
 <body>
     <script>
         
-let a = 1 
-let b = 2 
-let c = 3 
-
-a = b, c= 6
-
-console.log()
-
-
 
 
     </script>
