--- a/roadMap/commaOp/comma03.html
+++ b/roadMap/commaOp/comma03.html
@@ -7,13 +7,13 @@
 </head>
 <body>
     <script>
-let x, y, z 
+function f (a,b) {  
 
-x = (y = 3, z= 6)
+return a * b
 
-console.log(x)
+}
 
-
+console.log(f(2,9))
 
     </script>
 </body>
