--- a/roadMap/commaOp/comma03.html
+++ b/roadMap/commaOp/comma03.html
@@ -7,13 +7,13 @@
 </head>
 <body>
     <script>
-function f (a,b) {  
+let x, y, z 
 
-return a * b
+x = (y = 3, z= 6)
 
-}
+console.log(x)
 
-console.log(f(2,9))
+
 
     </script>
 </body>
