--- a/teste.html
+++ b/teste.html
@@ -7,22 +7,11 @@
 </head>
 <body>
     <script>
-let btn = window.document.querySelector('.btn')
-let msg = window.document.querySelector('#msg')
 
 
-
-
-
-btn.addEventListener('click', function(){
-let nuns = [1,2,3,4,5,6,7,8,9,10]
-
-let arr = nuns  [Math.floor(Math.random) *10 ]
-
-msg.innerHTML = arr
-})
-
-
+function f() {  
+    return 
+}
 
 
 
