--- a/roadMap/objt-proto/objt-proto02.html
+++ b/roadMap/objt-proto/objt-proto02.html
@@ -7,24 +7,15 @@
 </head>
 <body>
     <script>
-let cars = {
-    blue:true,
-    red:false,
-    yellow:true
-}
+        let speed  = {}
 
 
-let speed ={
+        console.log(typeof(speed))
 
-}
+speed['cars'] = true 
 
+console.log(speed['cars'])
 
-speed.__proto__=cars
-
-
-
-console.log(speed.red)
-console.log(speed.yellow)
 
     </script>
 </body>
