--- a/tstBarb.html
+++ b/tstBarb.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,23 +7,7 @@
 </head>
 <body>
     <script>
-
-
-
-
-let n1 = [0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24]
-
-let arr = [Math.floor(Math.random()* 24)]
-
-console.log(arr)
-
-
-if (arr < 12){
-    console.log('bom dia')
-}else{
-    console.log('boa tarde')
-}
-
+        
     </script>
 </body>
 </html>
